--- a/merchant/issue.html
+++ b/merchant/issue.html
@@ -37,77 +37,86 @@
 			</div>
 		</div>
 		<div class="weui-cell weui-cell_select weui-cell_select-after">
-			<div class="weui-cell__hd"><label class="weui-label">兼职名称</label></div>
+			<div class="weui-cell__hd"><label class="weui-label">兼职类型</label></div>
 			<div class="weui-cell__bd">
-				<select id="name" name="jzlabel" class="weui-select">
+				<select id="jzlabel" name="jzlabel" class="weui-select">
 					<option value="1">发单</option>
 					<option value="2">销售</option>
 					<option value="3">传销</option>
 				</select>
 			</div>
 		</div>
-		<hr>
-		<div class="weui-cells__title">性别</div>
-		<div class="weui-cells weui-cells_radio">
-			<label class="weui-cell weui-check__label" for="man">
-				<div class="weui-cell__bd">
-					<p>男</p>
-				</div>
-				<div class="weui-cell__ft">
-					<input type="radio" class="weui-check" name="sex" id="man">
-					<span class="weui-icon-checked"></span>
-				</div>
-			</label>
-			<label class="weui-cell weui-check__label" for="women">
-				<div class="weui-cell__bd">
-					<p>女</p>
-				</div>
-				<div class="weui-cell__ft">
-					<input type="radio" name="sex" class="weui-check" id="women" checked="checked">
-					<span class="weui-icon-checked"></span>
-				</div>
-			</label>
+		<div class="weui-cell weui-cell_select weui-cell_select-after">
+			<div class="weui-cell__hd"><label class="weui-label">薪资待遇</label></div>
+			<div class="col-70">
+				<input id="name" class="weui-input" type="text" placeholder="单位时间薪水">
+			</div>
+			<div class="col-30">
+				<select id="jzlabel" name="jzlabel" class="weui-select">
+					<option value="1">/天</option>
+					<option value="2">/小时</option>
+				</select>
+			</div>
 		</div>
 		<div class="weui-cell">
-			<div class="weui-cell__hd"><label class="weui-label">生日</label></div>
+			<div class="weui-cell__hd"><label class="weui-label">工作强度</label></div>
 			<div class="weui-cell__bd">
-				<input id="birthday" class="weui-input" style="background:#bdbdbd;" type="date" value="">
+				<input id="name" class="weui-input" type="text" placeholder="平均一天工作多少小时">
+			</div>
+			小时/天
+		</div>
+		<div class="weui-cell">
+			<div class="weui-cell__hd"><label class="weui-label">开始时间</label></div>
+			<div class="weui-cell__bd">
+				<input id="name" class="weui-input" type="date" placeholder="请选择时间">
+			</div>
+		</div>
+		<div class="weui-cell">
+			<div class="weui-cell__hd"><label class="weui-label">结束时间</label></div>
+			<div class="weui-cell__bd">
+				<input id="name" class="weui-input" type="date" >
+			</div>
+		</div>
+		<div class="weui-cell">
+			<div class="weui-cell__hd"><label class="weui-label">报名时间</label></div>
+			<div class="weui-cell__bd">
+				<input id="name" class="weui-input" type="date" >
+			</div>
+				前
+		</div>
+		<div class="weui-cell">
+			<div class="weui-cell__hd"><label class="weui-label">需求人数</label></div>
+			<div class="weui-cell__bd">
+				<input id="name" class="weui-input" type="text" placeholder="请输入需求人数">
+			</div>
+		</div>
+		<div class="weui-cell">
+			<div class="weui-cell__hd"><label class="weui-label">兼职地点</label></div>
+			<div class="weui-cell__bd">
+				<input id="name" class="weui-input" type="text" placeholder="请输入兼职地点">
 			</div>
 		</div>
 		<hr>
-		<div class="weui-cells__title">教育</div>
-		<div class="weui-cells weui-cells_radio">
-			<label class="weui-cell weui-check__label" for="studying">
-				<div class="weui-cell__bd">
-					<p>在读</p>
-				</div>
-				<div class="weui-cell__ft">
-					<input type="radio" class="weui-check" name="edu" id="studying">
-					<span class="weui-icon-checked"></span>
-				</div>
-			</label>
-			<label class="weui-cell weui-check__label" for="studied">
-				<div class="weui-cell__bd">
-					<p>毕业</p>
-				</div>
-				<div class="weui-cell__ft">
-					<input type="radio" name="edu" class="weui-check" id="studied" checked="checked">
-					<span class="weui-icon-checked"></span>
-				</div>
-			</label>
-		</div>
 		<div class="weui-cell">
-			<div class="weui-cell__hd"><label class="weui-label">学校</label></div>
+			<div class="weui-cell__hd"><label class="weui-label">联系人姓名</label></div>
 			<div class="weui-cell__bd">
-				<input id="school" class="weui-input" type="text" placeholder="请输入学校名称">
+				<input id="name" class="weui-input" type="text" placeholder="请输入联系人姓名">
 			</div>
 		</div>
 		<div class="weui-cell">
-			<div class="weui-cell__hd"><label class="weui-label">微信号</label></div>
+			<div class="weui-cell__hd"><label class="weui-label">联系人电话</label></div>
 			<div class="weui-cell__bd">
-				<input id="wechat" class="weui-input" type="text" placeholder="请输入微信号">
+				<input id="name" class="weui-input" type="text" placeholder="请输入联系人电话">
 			</div>
 		</div>
+		<hr>
+		<div class="weui-cells__title">兼职描述</div>
+		<div class="weui-cell">
+			<div class="weui-cell__bd">
+				<textarea class="weui-textarea" placeholder="请输入文本" rows="6"></textarea>
+			</div>
+		</div>
+		
 	</div>
 </div>
 <div>
