增加了注册、资产、登录、修改信息界面
增加了注册、资产、登录、修改信息界面
优化了三大界面

--- a/merchant/issue.html
+++ b/merchant/issue.html
@@ -116,7 +116,9 @@
 				<textarea class="weui-textarea" placeholder="请输入文本" rows="6"></textarea>
 			</div>
 		</div>
-		
+		<div class="weui-btn-area">
+		<button style="width:80%;" class="weui-btn weui-btn_primary">发布</button>
+		</div>
 	</div>
 </div>
 <div>
@@ -125,6 +127,7 @@
 <script src="../js/jquery-2.1.4.js"></script>
 <script src="../js/fastclick.js"></script>
 <script src="../js/jquery-weui.min.js"></script>
+<script src="../js/merchant.js"></script>
 <script>
 	$(function() {
 	FastClick.attach(document.body);
