--- a/merchant/list.html
+++ b/merchant/list.html
@@ -40,118 +40,8 @@
 	</div>
 	<div class="weui-tab__bd">
 		<div id="tab0" class="weui-tab__bd-item weui-tab__bd-item--active">
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">最后一个</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
 		</div>
 		<div id="tab1" class="weui-tab__bd-item">
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
 			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
 				<div class="weui-media-box__hd"><div class="i-circle">
 					类型
@@ -184,69 +74,9 @@
 				<span class="i-jz-money">100元/天</span>
 				</div>
 			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-
 		</div>
 		<div id="tab3" class="weui-tab__bd-item">
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
-			<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd"><div class="i-circle">
-					类型
-				</div></div>
-				<div class="weui-media-box__bd i-jz">
-				<span class="weui-media-box__title i-jz-title">标题一</span><br>
-				<span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br>
-				<span class="i-jz-money">100元/天</span>
-				</div>
-			</a>
+
 		</div>
 	</div>
 </div>
@@ -256,9 +86,19 @@
 <script src="../js/jquery-2.1.4.js"></script>
 <script src="../js/fastclick.js"></script>
 <script src="../js/jquery-weui.min.js"></script>
+<script src="../js/merchant.js"></script>
 <script>
 	$(function() {
 	FastClick.attach(document.body);
+	});
+
+	$(function(){
+		for(i=0;i<10;i++){
+			$('#tab0').append('<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg"><div class="weui-media-box__hd"><div class="i-circle">类型</div></div><div class="weui-media-box__bd i-jz"><span class="weui-media-box__title i-jz-title">标题一</span><br><span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br><span class="i-jz-money">100元/天</span></div></a>');
+			$('#tab1').append('<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg"><div class="weui-media-box__hd"><div class="i-circle">类型</div></div><div class="weui-media-box__bd i-jz"><span class="weui-media-box__title i-jz-title">标题一</span><br><span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br><span class="i-jz-money">100元/天</span></div></a>');
+			$('#tab2').append('<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg"><div class="weui-media-box__hd"><div class="i-circle">类型</div></div><div class="weui-media-box__bd i-jz"><span class="weui-media-box__title i-jz-title">标题一</span><br><span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br><span class="i-jz-money">100元/天</span></div></a>');
+			$('#tab3').append('<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg"><div class="weui-media-box__hd"><div class="i-circle">类型</div></div><div class="weui-media-box__bd i-jz"><span class="weui-media-box__title i-jz-title">标题一</span><br><span class="i-jz-desc">江宁 5月1日开始（共10天）</span><br><span class="i-jz-money">100元/天</span></div></a>');
+		}
 	});
 </script>
 </body>
